tests/init_state/require_uninit_err.preelaborated.err.expected
error: at 14:5: [INIT-RequireUninitNotSatisfied] In function 'live_place_is_rejected', block 'entry': value 'x' must be fully uninitialized by this point, but it is still initialized
    |
 13 |   entry:
 14 |     require_uninit x;
    |     ^^^^^^^^^^^^^^^^
 15 |     abort
    |
error: at 23:5: [INIT-RequireUninitNotSatisfied] In function 'partial_place_is_rejected', block 'entry': value 'p' must be fully uninitialized by this point, but it is only partially consumed
    |
 22 |     p.left = 1;
 23 |     require_uninit p;
    |     ^^^^^^^^^^^^^^^^
 24 |     abort
    |
error: at 38:5: [INIT-RequireUninitNotSatisfied] In function 'divergent_place_is_rejected', block 'join': value 'x' must be fully uninitialized by this point, but its state differs across control-flow paths
    |
 37 |   join:
 38 |     require_uninit x;
    |     ^^^^^^^^^^^^^^^^
 39 |     abort
    |
error: at 49:5: [INIT-RequireUninitNotSatisfied] In function 'unfulfilled_reference_is_rejected', block 'entry': value 'r' must be fully uninitialized by this point, but it is still initialized
    |
 48 |     r = &out x;
 49 |     require_uninit r;
    |     ^^^^^^^^^^^^^^^^
 50 |     abort
    |
error: at 49:5: [INIT-RefObligationUnfulfilled] In function 'unfulfilled_reference_is_rejected', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 45 |   x: i64;
 46 |   r: &out i64;
    |   ------------ reference declared here
 47 |   entry:
 48 |     r = &out x;
 49 |     require_uninit r;
    |     ^^^^^^^^^^^^^^^^
 50 |     abort
    |
error: at 59:5: [INIT-RequireUninitNotSatisfied] In function 'dereference_is_rejected', block 'entry': value 'r.*' must be fully uninitialized by this point, but its place is not statically trackable
    |
 58 |     r = &mut x;
 59 |     require_uninit r.*;
    |     ^^^^^^^^^^^^^^^^^^
 60 |     unborrow r;
    |
error: at 70:5: [INIT-RequireUninitNotSatisfied] In function 'dynamic_index_is_rejected', block 'entry': value 'a[?]' must be fully uninitialized by this point, but its place is not statically trackable
    |
 69 |   entry:
 70 |     require_uninit a[copy i];
    |     ^^^^^^^^^^^^^^^^^^^^^^^^
 71 |     drop i;
    |
error: at 83:5: [INIT-RequireUninitNotSatisfied] In function 'nested_reference_obligation_is_rejected', block 'entry': value 'b' must be fully uninitialized by this point, but it is still initialized
    |
 82 |     b.r = &out x;
 83 |     require_uninit b;
    |     ^^^^^^^^^^^^^^^^
 84 |     abort
    |
error: at 83:5: [INIT-RefObligationUnfulfilled] In function 'nested_reference_obligation_is_rejected', block 'entry': reference 'b.r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 79 |   x: i64;
 80 |   b: RefBox;
    |   ---------- reference declared here
 81 |   entry:
 82 |     b.r = &out x;
 83 |     require_uninit b;
    |     ^^^^^^^^^^^^^^^^
 84 |     abort
    |
